--- a/style.css
+++ b/style.css
@@ -54,5 +54,103 @@ Text Domain: kadence-child
   font-weight: bolder;
   margin-bottom: 20px;
 }
+.proto-content-wrap .proto-thumb-container {
+  display: block;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+.proto-content-wrap .proto-thumb {
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: grayscale(100);
+  transition: all 0.6s;
+  padding: 10px;
+}
+.proto-content-wrap .proto-thumb::after {
+  content: "";
+  display: block;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+  z-index: 2;
+  transition: all 0.6s;
+}
+.proto-content-wrap .proto-thumb:hover {
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
+.proto-content-wrap .proto-thumb:hover::after {
+  transform: scale(0.9);
+}
+
+.proto-content-wrap-horizontal {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 30px;
+  column-gap: 15px;
+  justify-content: space-evenly;
+}
+.proto-content-wrap-horizontal a {
+  text-decoration: none;
+}
+.proto-content-wrap-horizontal .proto-flex-item {
+  text-align: center;
+  overflow: wrap;
+  max-width: 210px;
+}
+.proto-content-wrap-horizontal .proto-flex-item h5 {
+  margin: 0px 0px 0px 0px;
+  font-size: smaller;
+  font-weight: bold;
+}
+.proto-content-wrap-horizontal .proto-thumb-container {
+  display: block;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+.proto-content-wrap-horizontal .proto-thumb {
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: grayscale(100);
+  transition: all 0.6s;
+  padding: 10px;
+}
+.proto-content-wrap-horizontal .proto-thumb::after {
+  content: "";
+  display: block;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--global-palette7);
+  z-index: 2;
+  transition: all 0.6s;
+}
+.proto-content-wrap-horizontal .proto-thumb:hover {
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
+.proto-content-wrap-horizontal .proto-thumb:hover::after {
+  transform: scale(0.9);
+}
 
 /*# sourceMappingURL=style.css.map */
