--- a/scss/policy_proposal/_policy_proposal.scss
+++ b/scss/policy_proposal/_policy_proposal.scss
@@ -22,18 +22,10 @@
     height: 400px;
     border-radius: 5px;
     padding: 25px;
-    transition: box-shadow 0.3s ease-in-out;
+    transition: all 0.5s ease-in-out;
     background-size: cover;
     background-position: center center;
     overflow: hidden;
-
-    hr.proto-hr {
-        position: relative;
-        width: 100%;
-        border: 1px solid var(--global-palette1);
-        opacity: 0.9;
-        margin: 10px 0 10px 0;
-    }
 
     &:hover {
         box-shadow:
@@ -42,6 +34,14 @@
         2.7px 2.7px 10px rgba(0, 0, 0, 0.042),
         6.4px 6.4px 17.9px rgba(0, 0, 0, 0.035),
         ;
+
+        .pp-title {
+            color: var(--global-palette1);
+        }
+
+        .pp-footer {
+            color: var(--global-palette1);
+        }
     }
 
     .pp-tax {
@@ -58,23 +58,36 @@
         border-top-left-radius: 0px;
         color: white;
         font-weight: 500;
-        background-color: var(--global-palette1);
+        background-color: $cy_orange;
         z-index: 10;
         width: fit-content;
     }
 
     .pp-title {
-        display: block;
+        display: flex;
+        align-items:center;
+        justify-content:center;
         position: relative;
-        line-height: 1.5;
-        font-weight: bold;
-        font-size: 20px;
+        line-height: 1.4;
+        font-weight: 500;
+        font-size: 18px;
+        min-height: 85px;
         color: var(--global-palette5);
+        border: 1px solid var(--global-palette1);
+        border-radius: 10px;
+        border-bottom-left-radius: 0px;
+        border-top-left-radius: 0px;
+        border-left: 0px solid transparent;
+        padding: 15px;
+        margin-left: -25px;
+        transition: all 0.5s ease-in-out;
+        // background-color: rgb(213,120,0,0.2);
         z-index: 10;
     }
 
     .pp-excerpt {
         display: block;
+        font-size: 16px;
         flex: 1 1 auto;
         position: relative;
         color: var(--global-palette5);
@@ -82,9 +95,14 @@
 
     .pp-footer {
         display: block;
+        color: var(--global-palette5);
+        border-top: 1px solid #ccc;
+        padding-top: 8px;
+        margin-bottom: -10px;
         font-weight: bold;
         font-size: small;
         text-align: right;
+        transition: all 0.5s ease-in-out;
     }
 }
 
