--- a/scss/policy_sector/_policy_sector.scss
+++ b/scss/policy_sector/_policy_sector.scss
@@ -4,18 +4,22 @@
     flex-wrap: wrap;
     row-gap: 20px;
     column-gap: 20px;
+    justify-content: space-evenly;
     width: 100%;
 
 }
 
+a.no-underline {
+    text-decoration: none;
+}
 
 .polsector-card
 {
     display: block;
     position: relative;
-    border: 1px solid navy;
-    width: 350px;
-    height: 134px;
+    border: 1px solid #ccc;
+    width: 356px;
+    height: 136px;
     padding: 20px;
     border-radius: 5px;
     background-color: transparent;
@@ -23,6 +27,7 @@
     transition: all 0.5s ease-in-out;
 
     &:hover {
+        border-color: #D57800 ;
         box-shadow:
         0px 0px 2.2px rgba(0, 0, 0, 0.07),
         0.8px 0.8px 5.3px rgba(0, 0, 0, 0.05),
@@ -32,7 +37,7 @@
 
         .count 
         {
-            color: darkgray;;
+            color: #D57800;
         }
     }
 
@@ -40,12 +45,13 @@
         display: block;
         position: relative;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 20px;
+        color: var(--global-palette5);
         z-index: 2;
+        width: 66%;
     }
 
     .count {
-        border: 1px solid black;
         text-align: right;
         padding-right: 20px;
         color: #F0F0F0;
@@ -60,6 +66,10 @@
         font-size: 60pt;
         z-index: 0;
 
-
+        .small-caps {
+            position: relative;
+            margin-top: -30px;
+            font-size: 14px;
+        }
     }
 }
