--- a/scss/team_member/_team-member.scss
+++ b/scss/team_member/_team-member.scss
@@ -99,6 +99,7 @@
                 background-size: cover;
                 background-repeat: no-repeat;
                 filter: grayscale(100);
+                opacity: 0.75;
                 transition: all .6s;
                 padding: 10px;
         
@@ -111,17 +112,19 @@
                     border-radius: 5px;
                     width: 100%;
                     height: 100%;
-                    border: 1px solid var(--global-palette7);
+                    border: 1px solid #ccc;
                     z-index: 2;
                     transition:  all .6s;
                 }
         
                 &:hover {
-                    filter:grayscale(0);
+                    filter: grayscale(0);
+                    opacity: 1;
                     transform: scale(1.1);
                     
         
                     &::after {
+                        border-color: $gr_blue;
                         transform: scale(0.9);
                     }
                 }
