--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ Text Domain: kadence-child
   background-size: cover;
   background-repeat: no-repeat;
   filter: grayscale(100);
+  opacity: 0.75;
   transition: all 0.6s;
   padding: 10px;
 }
@@ -105,15 +106,17 @@ Text Domain: kadence-child
   border-radius: 5px;
   width: 100%;
   height: 100%;
-  border: 1px solid var(--global-palette7);
+  border: 1px solid #ccc;
   z-index: 2;
   transition: all 0.6s;
 }
 .proto-team-member-card .proto-thumb-container .proto-thumb:hover {
   filter: grayscale(0);
+  opacity: 1;
   transform: scale(1.1);
 }
 .proto-team-member-card .proto-thumb-container .proto-thumb:hover::after {
+  border-color: #0d5eaf;
   transform: scale(0.9);
 }
 
@@ -149,20 +152,19 @@ Text Domain: kadence-child
   height: 400px;
   border-radius: 5px;
   padding: 25px;
-  transition: box-shadow 0.3s ease-in-out;
+  transition: all 0.5s ease-in-out;
   background-size: cover;
   background-position: center center;
   overflow: hidden;
 }
-.proto-ppcard hr.proto-hr {
-  position: relative;
-  width: 100%;
-  border: 1px solid var(--global-palette1);
-  opacity: 0.9;
-  margin: 10px 0 10px 0;
-}
 .proto-ppcard:hover {
   box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.07), 0.8px 0.8px 5.3px rgba(0, 0, 0, 0.05), 2.7px 2.7px 10px rgba(0, 0, 0, 0.042), 6.4px 6.4px 17.9px rgba(0, 0, 0, 0.035);
+}
+.proto-ppcard:hover .pp-title {
+  color: var(--global-palette1);
+}
+.proto-ppcard:hover .pp-footer {
+  color: var(--global-palette1);
 }
 .proto-ppcard .pp-tax {
   display: block;
@@ -178,30 +180,47 @@ Text Domain: kadence-child
   border-top-left-radius: 0px;
   color: white;
   font-weight: 500;
-  background-color: var(--global-palette1);
+  background-color: #D57800;
   z-index: 10;
   width: fit-content;
 }
 .proto-ppcard .pp-title {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  line-height: 1.5;
-  font-weight: bold;
-  font-size: 20px;
+  line-height: 1.4;
+  font-weight: 500;
+  font-size: 18px;
+  min-height: 85px;
   color: var(--global-palette5);
+  border: 1px solid var(--global-palette1);
+  border-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  border-left: 0px solid transparent;
+  padding: 15px;
+  margin-left: -25px;
+  transition: all 0.5s ease-in-out;
   z-index: 10;
 }
 .proto-ppcard .pp-excerpt {
   display: block;
+  font-size: 16px;
   flex: 1 1 auto;
   position: relative;
   color: var(--global-palette5);
 }
 .proto-ppcard .pp-footer {
   display: block;
+  color: var(--global-palette5);
+  border-top: 1px solid #ccc;
+  padding-top: 8px;
+  margin-bottom: -10px;
   font-weight: bold;
   font-size: small;
   text-align: right;
+  transition: all 0.5s ease-in-out;
 }
 
 .contrib-header {
@@ -215,35 +234,42 @@ Text Domain: kadence-child
   flex-wrap: wrap;
   row-gap: 20px;
   column-gap: 20px;
+  justify-content: space-evenly;
   width: 100%;
+}
+
+a.no-underline {
+  text-decoration: none;
 }
 
 .polsector-card {
   display: block;
   position: relative;
-  border: 1px solid navy;
-  width: 350px;
-  height: 134px;
+  border: 1px solid #ccc;
+  width: 356px;
+  height: 136px;
   padding: 20px;
   border-radius: 5px;
   background-color: transparent;
   transition: all 0.5s ease-in-out;
 }
 .polsector-card:hover {
+  border-color: #D57800;
   box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.07), 0.8px 0.8px 5.3px rgba(0, 0, 0, 0.05), 2.7px 2.7px 10px rgba(0, 0, 0, 0.042), 6.4px 6.4px 17.9px rgba(0, 0, 0, 0.035);
 }
 .polsector-card:hover .count {
-  color: darkgray;
+  color: #D57800;
 }
 .polsector-card .title {
   display: block;
   position: relative;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
+  color: var(--global-palette5);
   z-index: 2;
+  width: 66%;
 }
 .polsector-card .count {
-  border: 1px solid black;
   text-align: right;
   padding-right: 20px;
   color: #F0F0F0;
@@ -257,6 +283,11 @@ Text Domain: kadence-child
   font-weight: bold;
   font-size: 60pt;
   z-index: 0;
+}
+.polsector-card .count .small-caps {
+  position: relative;
+  margin-top: -30px;
+  font-size: 14px;
 }
 
 /*# sourceMappingURL=style.css.map */
