--- a/scss/policy_proposal/_policy_proposal.scss
+++ b/scss/policy_proposal/_policy_proposal.scss
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    column-gap: 20px;
-    row-gap: 30px;
+    column-gap: 30px;
+    row-gap: 60px;
     margin-bottom: 30px;
     justify-content: space-between;
 }
@@ -28,6 +28,7 @@
     overflow: hidden;
 
     &:hover {
+        border-color: var(--global-palette1);
         box-shadow:
         0px 0px 2.2px rgba(0, 0, 0, 0.07),
         0.8px 0.8px 5.3px rgba(0, 0, 0, 0.05),
